[project]
name = "mcp-server-codetree"
version = "0.2.0"
description = "MCP server with 23 tools for structured code understanding via tree-sitter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "mcp", "mcp-server", "tree-sitter", "code-analysis", "coding-agents",
    "model-context-protocol", "ast", "static-analysis", "code-intelligence",
    "ai-coding", "cursor", "claude", "copilot", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: General",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-kotlin>=0.23.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
codetree = "codetree.__main__:main"

[project.urls]
Homepage = "https://github.com/ThinkyMiner/codeTree"
Repository = "https://github.com/ThinkyMiner/codeTree"
Issues = "https://github.com/ThinkyMiner/codeTree/issues"
Changelog = "https://github.com/ThinkyMiner/codeTree/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codetree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
